CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT (hap_video_opengl)


FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenGL_LIBRARY_DIRS})
ADD_DEFINITIONS(${OpenGL_DEFINITIONS})
IF(NOT OPENGL_FOUND)
    MESSAGE(FATAL_ERROR " OPENGL not found!")
ENDIF(NOT OPENGL_FOUND)


FIND_PACKAGE(GLUT REQUIRED)
LINK_DIRECTORIES(${GLUT_LIBRARY_DIRS})
IF(NOT GLUT_FOUND)
    MESSAGE(FATAL_ERROR "GLUT must be available in order to build this module.")
ENDIF(NOT GLUT_FOUND)


FILE(GLOB VIDEO_OPENGL_SOURCES src/*.c)
ADD_LIBRARY(hap_video_opengl SHARED ${VIDEO_OPENGL_SOURCES})


TARGET_LINK_LIBRARIES(hap_video_opengl
  ${OPENGL_LIBRARIES}
  ${GLUT_LIBRARY}
)
