CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT (hap_video_opengl)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenGL_LIBRARY_DIRS})
ADD_DEFINITIONS(${OpenGL_DEFINITIONS})


FILE(GLOB_RECURSE VIDEO_OPENGL_HEADERS include/*.h src/*.h)
FILE(GLOB VIDEO_OPENGL_SOURCES src/*.c src/*.m)

ADD_LIBRARY(hap_video_opengl SHARED ${VIDEO_OPENGL_SOURCES} ${VIDEO_OPENGL_HEADERS})
TARGET_LINK_LIBRARIES(hap_video_opengl PRIVATE ${OPENGL_LIBRARIES})

# On OSX, we want to include SDL for Window creation
IF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Darwin")
  SET(SDL_LIBRARY "SDL2")
  SET(SDL_BUILDING_LIBRARY "Setting this avoids SDL wrapping our main loop")
  FIND_PACKAGE(SDL REQUIRED)
  SET(HAP_MODULE_LIBRARIES ${HAP_MODULE_LIBRARIES} ${SDL_LIBRARY})
  TARGET_INCLUDE_DIRECTORIES(hap_video_opengl PUBLIC ${SDL_INCLUDE_DIR})
  IF(NOT SDL_FOUND)
    MESSAGE(FATAL_ERROR " SDL not found!")
  ENDIF(NOT SDL_FOUND)
ELSEIF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
  SET(X11_LIBRARY "X11")
  SET(X11_BUILDING_LIBRARY "Setting this avoids SDL wrapping our main loop")
  FIND_PACKAGE(X11 REQUIRED)
  SET(HAP_MODULE_LIBRARIES ${HAP_MODULE_LIBRARIES} ${X11_LIBRARY})
  TARGET_INCLUDE_DIRECTORIES(hap_video_opengl PUBLIC ${X11_INCLUDE_DIR})
  IF(NOT X11_FOUND)
    MESSAGE(FATAL_ERROR " X11 not found!")
  ENDIF(NOT X11_FOUND)
ENDIF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Darwin")